--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<title>
-			My Sample Project
+			Slides
 		</title>
 		<!-- data-main attribute tells require.js to load scripts/main.js after require.js
 		loads. -->
 		<script data-main="main" src="../bower_components/requirejs/require.js">
+				
 		</script>
+		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="github.css" />
 	</head>
 	<body>
-		<h1>
-			My Sample Project
-		</h1>
 	</body>
 
 </html>
